--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="" href="/public/images/brand/meta_core_circle_logo.png"  className="w-8 h-8 inline-block mr-2" />
+    <link rel="icon" type="" href="/images/brand/meta_core_circle_logo.png"  className="w-8 h-8 inline-block mr-2" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MetaCore Systems Inc. | Home </title>
+    <title>MetaCore Systems Inc. | Hme </title>
   </head>
   <body>
     <div id="root"></div>
